--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Your App</title>
+    <title>Torn Chainer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
