--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <button id="nextBtn">
                 <img src="assets/next.png" alt="Next">
             </button>
+            <button id="apiKeyBtn">
+                <img src="assets/key.png" alt="API Key">
+            </button>
         </div>
         <div class="toolbar-group right-group">
             <button id="themeToggleBtn">
